testsuite/positive/Issue-git-0590-1.n
using System.Console;

public interface IA { F() : void; }
public interface IA[T] : IA { new F() : void; }

public interface IX[T] : IA[T], IA {}
public class X[T] : IX[T]
{
  public F1() : void implements IA[T].F { WriteLine("IA[T].F"); }
  public F2() : void implements IA.F { WriteLine("IA.F"); }
}

public interface IY[T] : IA, IA[T] {}
public class Y[T] : IY[T]
{
  public F1() : void implements IA.F { WriteLine("IA.F"); }
  public F2() : void implements IA[T].F { WriteLine("IA[T].F"); }
}

module Program
{
  Main() : void
  {
    def x : IX[_] = X.[int]();
    x.F();
    (x : IA).F();
    (x : IA[_]).F();

    def x2 = X.[int]();
    x2.F1();
    x2.F2();
    (x2 : IA).F();
    (x2 : IA[_]).F();

    def y : IY[_] = Y.[int]();
    y.F();
    (y : IA).F();
    (y : IA[_]).F();

    def y2 = Y.[int]();
    y2.F1();
    y2.F2();
    (y2 : IA).F();
    (y2 : IA[_]).F();
  }
}

/*  
BEGIN-OUTPUT  
IA[T].F
IA.F
IA[T].F
IA[T].F
IA.F
IA.F
IA[T].F
IA[T].F
IA.F
IA[T].F
IA.F
IA[T].F
IA.F
IA[T].F
END-OUTPUT  
*/