testsuite/negative/value-variance.n
public interface IFoo[+T] { }

public class A : IFoo[int] { }

public interface IBar[-T] { }

public class B : IBar[int] { }

module Program
{
  Test(_ : IBar[object]) : void { }

  Main() : void
  {
    def x : IFoo[object] = A(); // E:  the types int and object are not compatible
    Test(B.[int]());            // E:  the types int and object are not compatible
  }
}
